--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 	<button class="btn">wrong</button>
 	<button class="stop">stop</button>
 	</div>
+	<audio id="player"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
